welcome.lessons.welcome.conditions.Conditions.scala.code
if(estFacemur()){
	avance();
} else{ 
	recule();
}

